<resources>
    <string name="app_name">DuAnMau_PH19020</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_qlpm">Quản lý Phiếu mượn</string>
    <string name="menu_qlls">Quản lý Loại sách</string>
    <string name="menu_qls">Quản lý Sách</string>
    <string name="menu_qltv">Quản lý Thành viên</string>
    <string name="menu_tktop">10 Sách mượn nhiều nhất</string>
    <string name="menu_dt">Doanh thu</string>
    <string name="menu_title_tk">Thống kê</string>
    <string name="menu_title_nd">Người dùng</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="menu_dmk">Đổi mật khẩu</string>
    <string name="menu_exit">Đăng xuất</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="menu_ttk">Quản lý tài khoản</string>
    <string name="dialog_sach_masach">Mã sách</string>
    <string name="dialog_sach_tenSach">Tên sách</string>
    <string name="dialog_sach_giaThue">Giá thuê</string>
    <string name="dialog_sach_saveBtn">Lưu</string>
    <string name="dialog_sach_cancelBtn">Hủy</string>
    <string name="username">Tên đăng nhập</string>
    <string name="hoTen">Họ và tên</string>
    <string name="password">Mật khẩu</string>
    <string name="rePassword">Nhập lại mật khẩu</string>
    <string name="saveBtn">Lưu</string>
    <string name="cancelBtn">Hủy</string>
    <string name="maLoaiSach">Mã loại sách</string>
    <string name="TenLoaiSach">Tên loại sách</string>
    <string name="maPhieuMuon">Mã phiếu mượn</string>
    <string name="daTraSach">Đã trả sách</string>
    <string name="textview">TextView</string>
    <string name="tenDangNhap">Tên đăng nhập</string>
    <string name="luuMatKhau">Lưu mật khẩu</string>
    <string name="dangNhap">Đăng nhập</string>
    <string name="oldPass">Mật khẩu cũ</string>
    <string name="newPass">Mật khẩu mới</string>
    <string name="rePass">Nhập lại mật khẩu mới</string>
    <string name="tungay">Từ ngày</string>
    <string name="denngay">Đến ngày</string>
    <string name="action_search">Search</string>
</resources>